traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:20: error: expected start of definition
override def run() {def deplacement() 
         ^